<resources>
    <string name="app_name">Speer Github</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_username">Search username</string>
    <string name="search">Search</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="not_found">Not found</string>
</resources>